Fix overlaping problem

--- a/snowflake-songs-app/src/style/snowflake.css
+++ b/snowflake-songs-app/src/style/snowflake.css
@@ -21,6 +21,5 @@
 .snowflake .section path {
 	stroke: #cbcbcb;
 	stroke-width: 0.5px;
-	fill-opacity: 0.5;
-	mix-blend-mode: "soft-light";
+	fill-opacity: 0.7;
 }
